add catalog endpoints
